--- a/.github/workflows/transcribe-urls-from-issues.yml
+++ b/.github/workflows/transcribe-urls-from-issues.yml
@@ -47,6 +47,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      
+    - name: Wait for artifacts
+      run: sleep 20
 
     - name: Download all artifacts
       uses: actions/download-artifact@v4
