--- a/.github/workflows/transcibe-url-with-title.yml
+++ b/.github/workflows/transcibe-url-with-title.yml
@@ -38,9 +38,9 @@ jobs:
         # Download YouTube video
         mkdir youtube
         cd youtube
-        # wget https://github.com/ytdl-org/ytdl-nightly/releases/download/2024.07.11/youtube-dl
-        # chmod 777 youtube-dl
-        youtube-dl -o 'youtube.mp4' '${{ inputs.youtube_url }}'
+        wget https://github.com/ytdl-org/ytdl-nightly/releases/download/2024.07.25/youtube-dl
+        chmod 777 youtube-dl
+        ./youtube-dl -o 'youtube.mp4' '${{ inputs.youtube_url }}'
 
         # Get the YouTube video title
         video_title=$(youtube-dl --get-title '${{ inputs.youtube_url }}' | sed 's/[^a-zA-Z0-9]/_/g')
