--- a/.github/workflows/transcibe-url-with-title.yml
+++ b/.github/workflows/transcibe-url-with-title.yml
@@ -40,6 +40,7 @@ jobs:
         cd youtube
         wget https://github.com/ytdl-org/ytdl-nightly/releases/download/2024.08.02/youtube-dl
         chmod 777 youtube-dl
+        ./youtube-dl -U 
         ./youtube-dl -o 'youtube.mp4' '${{ inputs.youtube_url }}'
 
         # Get the YouTube video title
